Revert "Correct z-index of 'more button' on drawing view"
This reverts commit ada1b2437776295b9d32fd1b5b7ac50fd25ceb25.

--- a/src/components/draw/style/draw.less
+++ b/src/components/draw/style/draw.less
@@ -27,10 +27,6 @@
     width: auto;
   }
 
-  ul.dropdown-menu {
-    z-index: 1500;
-  }
-
   .ga-draw-info-save {
     color: lightgray;
     margin-left: 30px;
